# docs

./: .gitignore  README.md  mkdocs.yml  outline.md  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml
docs/: BFS-Query-Language.md  BigChat.md  Book-outline-20260702.md  Cookbook.md  NER-pipeline.md  Wheel-file.md  architecture.md  books.md  contributing.md  formal-defns.md  horn-clauses-datalog.md  index.md  overview.md
docs/identity/: canonical-ids.md  deduplication.md
docs/ingestion/: chunking.md  error-handling.md  pipeline.md
docs/llm-integration/: embeddings.md  extraction-prompts.md  mcp-server.md  mcp-troubleshooting.md  querying.md
docs/schema/: adapting-to-your-domain.md  schema-design-guide.md
docs/trust/: conflicting-claims.md  provenance.md
